# haskgrad

./: LICENSE  README.md  contact.txt  haskgrad.cabal  public-release.md  report.txt
app/: Autograd.hs  Main.hs  NN.hs  Tensor.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
