cabal-version:      3.0
name:               haskgrad
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             charliekerfoot
maintainer:         charliekerfoot@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskgrad
    import:           warnings
    main-is:          Main.hs
    other-modules:    Autograd, Tensor, NN
    build-depends:    base ^>=4.18.3.0, containers
    hs-source-dirs:   app
    default-language: Haskell2010
